Switched to hibernate.
Redid the entire project.It seems to be working ;).